--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,16 +4,13 @@ on:
   push:
     branches:
       - main
-  # Allow manual triggers from GitHub UI
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -25,10 +22,70 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: Check if triggered by merge commit
+        id: check_merge
+        uses: actions/github-script@v7
+        with:
+          script: |
+            if (context.eventName !== 'push') {
+              return false;
+            }
+            const commit = await github.rest.repos.getCommit({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: context.sha
+            });
+            const isMerge = commit.data.parents.length > 1;
+            if (isMerge) {
+              console.log('Triggered by merge commit, skipping workflow to prevent loop');
+            }
+            return isMerge;
+
+      - name: Exit if merge commit
+        if: steps.check_merge.outputs.result == 'true'
+        run: |
+          echo "Workflow triggered by merge commit from upstream sync, exiting to prevent loop"
+          exit 0
+
+      - name: Check if fork
+        id: check_fork
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const repo = await github.rest.repos.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo
+            });
+            return repo.data.fork;
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          token: ${{ secrets.TEMPLATE_PAT }}
+          fetch-depth: 0
+
+      - name: Configure Git
+        run: |
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'action@github.com'
+
+      - name: Sync with upstream
+        id: sync_fork
+        if: steps.check_fork.outputs.result == 'true'
+        run: |
+          echo "sync_happened=false" >> $GITHUB_OUTPUT
+          git remote add upstream https://github.com/OrderlyNetworkDexCreator/dex-creator-template.git || true
+          git fetch upstream
+          
+          # Try to merge upstream/main
+          if git merge upstream/main --no-edit; then
+            echo "Successfully merged upstream changes"
+            echo "sync_happened=true" >> $GITHUB_OUTPUT
+            git push origin main
+          else
+            echo "Merge failed or no changes to merge"
+            git merge --abort 2>/dev/null || true
+          fi
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -51,7 +108,13 @@ jobs:
       - name: Check if only config changed
         id: check-changes
         run: |
-          if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q -v "^public/config\.js$"; then
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "needs_build=true" >> $GITHUB_OUTPUT
+            echo "Manual trigger detected - forcing full build"
+          elif [ "${{ steps.sync_fork.outputs.sync_happened }}" = "true" ]; then
+            echo "needs_build=true" >> $GITHUB_OUTPUT
+            echo "Fork sync happened - forcing full build"
+          elif git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -q -v "^public/config\.js$"; then
             echo "needs_build=true" >> $GITHUB_OUTPUT
           else
             echo "needs_build=false" >> $GITHUB_OUTPUT
@@ -73,7 +136,6 @@ jobs:
           fi
 
       - name: Restore previous build (if only config changed)
-        id: restore-build
         if: steps.check-changes.outputs.needs_build == 'false'
         uses: actions/cache/restore@v4
         with:
@@ -83,11 +145,15 @@ jobs:
             ${{ runner.os }}-build-${{ github.repository }}
         continue-on-error: true
 
-      - name: Force build if cache restore failed
-        if: steps.check-changes.outputs.needs_build == 'false' && steps.restore-build.outputs.cache-hit != 'true'
+      - name: Check if build directory exists
+        if: steps.check-changes.outputs.needs_build == 'false'
         run: |
-          echo "No previous build found, forcing full build"
-          echo "needs_build=true" >> $GITHUB_OUTPUT
+          if [ -d "./build" ] && [ "$(ls -A ./build)" ]; then
+            echo "Build directory found with content"
+          else
+            echo "needs_build=true" >> $GITHUB_OUTPUT
+            echo "Build directory empty or missing, forcing full build"
+          fi
         id: force-build
 
       - name: Install dependencies
@@ -114,7 +180,7 @@ jobs:
           VITE_BASE_URL: ""
 
       - name: Copy updated config to build (if using cached build)
-        if: steps.check-changes.outputs.needs_build == 'false' && steps.restore-build.outputs.cache-hit == 'true'
+        if: steps.check-changes.outputs.needs_build == 'false' && steps.force-build.outputs.needs_build != 'true'
         run: |
           cp public/config.js ./build/client/config.js
           echo "✅ Updated config.js copied to build output"
